# wordy_srs

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  db backup.sqlite
assets/: styles.css
docker/: Dockerfile  docker-compose.yml
migrations/: 20231006171612_sentences.sql  20231007101805_foreign_keys.sql  20231009120323_words.sql  20231009120409_word_sentence.sql  20231013093941_words_date_added_date_reviewed.sql  20231013095557_sentence_date_added.sql  20231013140152_sentence_source.sql
src/: core2k.txt  japanese_word_frequency.txt  knowledge.rs  main.rs
templates/: add.html  base.html  error.html  index.html  review.html
