[package]
name = "wordy_srs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { version = "0.6.20", features = ["query", "json", "form"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.10.0"
log = "0.4.20"
sqlx = { version = "0.7", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
serde = "1.0.188"
lindera = "0.14.0"
chrono = "0.4.31"
futures = "0.3.28"
tower-http = { version = "0.4.4", features = ["fs"] }
